<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registration">

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressregistation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:text="@string/register_here"
            android:textStyle="bold"
            android:layout_marginTop="1dp"
            android:textSize="18sp"/>
        <EditText
            android:layout_width="match_parent"
            android:id="@+id/fName"
            android:layout_height="50dp"
            android:hint="@string/first_name"
            android:layout_marginTop="6dp"
            android:inputType="text" />
        <EditText
            android:id="@+id/lName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/l_name"
            android:layout_marginTop="6dp"
            android:inputType="text" />
        <EditText
            android:id="@+id/pNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/pNumber"
            android:layout_marginTop="6dp"
            android:inputType="number" />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:layout_marginTop="6dp"
            android:inputType="textEmailAddress" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginTop="6dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/register1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="6dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/logbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:padding="10dp"
            android:text="@string/loginbtn"
            android:textStyle="bold" />


    </LinearLayout>




</RelativeLayout>