<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/img"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:src="@mipmap/office" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="2dp"
            android:layout_height="2dp"
            android:layout_below="@+id/img"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/textView"
            android:layout_marginTop="6dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/email"
            android:layout_marginTop="6dp"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/password"
            android:layout_marginTop="6dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/loginbtn" />

        <Button
            android:id="@+id/signup"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:layout_alignEnd="@+id/textView"
            android:layout_below="@+id/login"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/img"
            android:layout_marginBottom="45dp"
            android:text="Forgot password" />
    </RelativeLayout>




</RelativeLayout>